# mediameta

./: .gitignore  README.md  build_and_install.sh  dataroutines.py  mediameta.py  pyproject.toml  sample_mm_cli.py  tags.py
python_package/: README.md  pyproject.toml
python_package/src/mediameta/: __init__.py  dataroutines.py  imagemetadata.py  mediametadata.py  tags.py  videometadata.py
python_package/src/mmdandelionsystems/: __init__.py  dataroutines.py  mediameta.py  tags.py
src/mediameta/: __init__.py  dataroutines.py  imagemetadata.py  mediametadata.py  tags.py  videometadata.py
src/mmdandelionsystems/: __init__.py  mediameta.py
